--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('https://example.com/bg-image.jpg'); /* URL ของรูปภาพพื้นหลัง */
+            background-image: url('https://img2.pic.in.th/pic/beyond-the-other-sidef36e0903ceb8c52f.gif'); /* URL ของรูปภาพพื้นหลัง */
             background-size: cover;
             background-position: center;
             text-align: center;
